--- a/erp_mes/src/main/resources/templates/plant/maintenance.html
+++ b/erp_mes/src/main/resources/templates/plant/maintenance.html
@@ -17,7 +17,7 @@
 <body>
 <th:block layout:fragment="content">
     <div class="container-fluid">
-    	
+    	<h1 class="h3 mb-2 text-gray-900">설비이력</h1>
 <!--     	<button id="prs-add" class="btn btn-primary btn-sm" onclick="addProcess()" style="float:right;">추가</button> -->
     	<button id="openModalBtn" class="btn btn-primary btn-sm" style="float:right;">추가</button>
 		<div id="grid"></div>
