--- a/erp_mes/src/main/resources/templates/plant/process.html
+++ b/erp_mes/src/main/resources/templates/plant/process.html
@@ -16,6 +16,7 @@
 <body>
 <th:block layout:fragment="content">
     <div class="container-fluid">
+ 	    <h1 class="h3 mb-2 text-gray-900">공정 관리</h1>
 <!--     	모달창 버튼으로 변경 -->
     	<button id="openModalBtn" class="btn btn-primary btn-sm" style="float:right;">추가</button>
 		<div id="grid" style="width: 100%; height: 300px;"></div>
