--- a/erp_mes/src/main/resources/templates/login.html
+++ b/erp_mes/src/main/resources/templates/login.html
@@ -40,13 +40,13 @@
 						<!-- Nested Row within Card Body -->
 						<div class="row">
 							<div class="col-lg-6 d-none d-lg-block">
-								<img src="/bootstrap/img/itwill.png" alt="로그인 이미지"
-									style="width: 100%; height: 100%;">
+								<img src="/bootstrap/img/novaImg.png" alt="로그인 이미지"
+									style="width: 100%; height: 100%; margin-left: 40px;  ">
 							</div>
 							<div class="col-lg-6">
 								<div class="p-5">
 									<div class="text-center">
-										<h1 class="h4 text-gray-900 mb-4">심화반 ERP</h1>
+										<h1 class="h3 text-gray-900 mb-4">로그인</h1>
 									</div>
 									<form class="user" method="post" action="/login">
 										<input type="hidden" th:name="${_csrf.parameterName}"
@@ -73,7 +73,7 @@
 									<hr>
 									<div class="dev-login">
 									<h3>테스트용 로그인 버튼</h3>
-										<a href="#" class="login" id="admin" data-role="ADMIN">ADMIN</a>			<br>
+										<a href="#" class="login" id="admin" data-role="ADMIN">ADMIN</a><br>
 										<a href="#" class="login" id="user"data-role="USER">USER</a>
 									</div>
 								</div>
