--- a/erp_mes/src/main/resources/templates/plant/equipment.html
+++ b/erp_mes/src/main/resources/templates/plant/equipment.html
@@ -15,7 +15,7 @@
 <body>
 <th:block layout:fragment="content">
     <div class="container-fluid">
-    	
+    	<h1 class="h3 mb-2 text-gray-900">설비 관리</h1>
 <!-- 		모달창 버튼으로 변경 -->
     	<button id="openModalBtn" class="btn btn-primary btn-sm" style="float:right;">추가</button>
 		<div id="grid"></div>
