헤더 푸터 변경

--- a/erp_mes/src/main/resources/templates/fragments/footer.html
+++ b/erp_mes/src/main/resources/templates/fragments/footer.html
@@ -9,7 +9,7 @@
     <footer class="sticky-footer bg-white">
         <div class="container my-auto">
             <div class="copyright text-center my-auto">
-                <span>부산아이티윌  &copy; 심화반 프로젝트</span>
+                <span>NOVA  &copy; ERP-MES</span>
             </div>
         </div>
     </footer>
