--- a/erp_mes/src/main/resources/templates/fragments/header.html
+++ b/erp_mes/src/main/resources/templates/fragments/header.html
@@ -23,9 +23,8 @@
 				class="sidebar-brand d-flex align-items-center justify-content-center"
 				th:href="@{/}">
 				<div class="sidebar-brand-icon rotate-n-15">
-					<i class="fas fa-laugh-wink"></i>
 				</div>
-				<div class="sidebar-brand-text mx-3">부산 아이티윌</div>
+				<div class="sidebar-brand-text mx-3">NOVA</div>
 			</a>
 
 			<!-- Divider -->
