수주 - 출하 연동 완료(날짜지연 경우는 제외)

--- a/erp_mes/src/main/resources/templates/business/order.html
+++ b/erp_mes/src/main/resources/templates/business/order.html
@@ -35,6 +35,7 @@
                                    			<option value="ALL">전체</option>
                                     		<option value="RECEIVED">등록</option>
                                     		<option value="INPRODUCTION">생산중</option>
+                                    		<option value="INSHIPMENT">출하진행중</option>
                                     		<option value="COMPLETION">출하완료</option>
                                     		<option value="CANCELED">취소</option>
                                 		</select>
