--- a/erp_mes/src/main/resources/templates/fragments/header.html
+++ b/erp_mes/src/main/resources/templates/fragments/header.html
@@ -211,7 +211,7 @@
 						<h6 class="collapse-header">검사 관리:</h6>
 						<a class="collapse-item" th:href="@{/quality/qih}">품질검사 이력관리</a>
 						<h6 class="collapse-header">불량 관리:</h6>
-						<a class="collapse-item" th:href="@{/schedule}">불량 관리</a> <a
+						<a class="collapse-item" th:href="@{/defect}">불량 관리</a> <a
 							class="collapse-item" th:href="@{/schedule}">분석 리포트</a>
 
 					</div>
