작업지시발주와 일반발주 모달창 분리중

--- a/erp_mes/src/main/resources/templates/business/shipment.html
+++ b/erp_mes/src/main/resources/templates/business/shipment.html
@@ -33,8 +33,9 @@
                             			<label for="shipmentStatus" class="shipmentStatus">진행상태</label>
                                 		<select id="shipmentStatus" class="form-select" aria-label="전체">
                                    			<option value="ALL">전체</option>
-                                    		<option value="COMPLETION">출하완료</option>
+                                   			<option value="READY">출하대기</option>
                                     		<option value="PARTIAL">부분출하</option>
+                                    		<option value="COMPLETION">출하완료</option>
                                     		<option value="DELAY">날짜지연</option>
                                 		</select>
                                 	</div>
