--- a/erp_mes/src/main/resources/templates/purchase/purchaseOrder.html
+++ b/erp_mes/src/main/resources/templates/purchase/purchaseOrder.html
@@ -46,7 +46,8 @@
 								</div>
                             	<div class="search-buttons">
                             		<button id="searchBtn" class="btn btn-light">검색</button>
-                                	<button id="addBtn" class="btn btn-light">등록</button>
+                                	<button id="WorkOrderAddBtn" class="btn btn-light">작업지시발주</button>
+                                	<button id="NormalAddBtn" class="btn btn-light">일반발주</button>
                             	</div>
                             </div>
                             
