부분출하인 품목 추가 출하할 때 출하수량 무조건 1개이상 입력해야 출하 가능하도록 수정

--- a/erp_mes/src/main/resources/templates/purchase/purchaseOrder.html
+++ b/erp_mes/src/main/resources/templates/purchase/purchaseOrder.html
@@ -82,7 +82,7 @@
 								<select id="clientId" class="form-select" required></select>
 							</div>
 							<div class="col-md-6 d-flex align-items-center">
-								<label for="inputDate" class="form-label me-2 mb-0" style="white-space: nowrap;">입고일</label>
+								<label for="inputDate" class="form-label me-2 mb-0" style="white-space: nowrap;">입고요청일</label>
 								<input type="date" class="form-control" id="inputDate" required>
 							</div>
 						</div>
