--- a/erp_mes/src/main/resources/templates/gw/document.html
+++ b/erp_mes/src/main/resources/templates/gw/document.html
@@ -19,7 +19,7 @@
 			<div class="card shadow mb-4">
 				<div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
 					<h6 class="m-0 font-weight-bold text-primary">사내 공통 문서</h6>
-					<a href="/groupware/docWrite" class="btn btn-primary btn-icon-split" sec:authorize="!hasAuthority('ROLE_AUT003')">
+					<a href="/groupware/docWrite" class="btn btn-primary btn-icon-split" sec:authorize="hasAuthority('ROLE_AUT001')">
 						<span class="icon text-white-50">
 							<i class="fas fa-plus"></i>
 						</span>
@@ -36,7 +36,7 @@
 									<th>제목</th>
 									<th>작성자</th>
 									<th>작성일</th>
-									<th>관리</th>
+									<th sec:authorize="hasAuthority('ROLE_AUT001')">관리</th>
 								</tr>
 							</thead>
 							<tbody>
@@ -50,7 +50,7 @@
 									</td>
 									<td th:text="|${doc.empName} (${doc.deptName}/${doc.positionName})|"></td>
 									<td th:text="${doc.createAt != null} ? ${#temporals.format(doc.createAt, 'yyyy-MM-dd')} : ''"></td>
-									<td>
+									<td sec:authorize="hasAuthority('ROLE_AUT001')">
 										<a class="btn btn-warning" id="modify-btn" th:href="@{/groupware/docWrite(docId=${doc.docId})}">수정</a>
 										<button type="button" class="btn btn-danger" id="delete-btn" th:attr="data-id=${doc.docId}">삭제</button>
 									</td>
