설비 이력 라우팅등록 수리이력 확인 제외하고 팝업 없앰

--- a/erp_mes/src/main/resources/templates/plant/fix_history.html
+++ b/erp_mes/src/main/resources/templates/plant/fix_history.html
@@ -48,10 +48,14 @@
 	     ],
 	   });
 		grid.resetData(equipList);
+		
+		$.get('/fix_historyGrid',{})
+		
+		
 	});
 	
 	      
-	   
+	   /*
 	   
 	const closeBtn = document.querySelector(".btn.btn-secondary");
 		if (closeBtn) {
@@ -59,7 +63,7 @@
 	           window.close();
 	       });
 	 	}
-	 
+	 */
 
         
     </script>
