--- a/erp_mes/src/main/resources/static/bootstrap/css/pop/workResult.css
+++ b/erp_mes/src/main/resources/static/bootstrap/css/pop/workResult.css
@@ -170,6 +170,10 @@
     font-size: 20px;
 }
 
+.btn-disabled {
+  pointer-events: none;  /* 클릭 막기 */
+  opacity: 0.5;          /* 흐릿하게 */
+}
 
-/*  */
+/* */
 
