--- a/erp_mes/src/main/resources/templates/pop/work_result.html
+++ b/erp_mes/src/main/resources/templates/pop/work_result.html
@@ -7,6 +7,9 @@
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://uicdn.toast.com/grid/latest/tui-grid.min.css" />
 		<link rel="stylesheet" th:href="@{/bootstrap/css/pop/workResult.css}" />
+		
+		<meta name="_csrf" th:content="${_csrf.token}">
+		<meta name="_csrf_header" th:content="${_csrf.headerName}">
     
 </head>
 <body>
@@ -33,7 +36,6 @@
                 			<tr>
 								<th>작업지시ID</th>
 							    <th>제품명</th>
-							    <th>공정명</th>
 							    <th>작업시작일</th>
 							    <th>작업종료일</th>							    
 							    <th>작업상태</th>							    
@@ -76,12 +78,11 @@
 				<div id="bomInfo" style="width:100%; height:200px; margin-bottom: 3%;">
 					<div id="Workgrid1"></div>
 				</div>
-
-				<div class="modal-footer">
-					<button type="button" class="btn btn-dark btn-sm" data-bs-dismiss="modal">닫기</button>
-					<button id="workOrderCheck" type="submit" class="btn btn-success btn-sm">확인</button>
-				</div>	
 			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-dark btn-sm" data-bs-dismiss="modal">닫기</button>
+				<button id="workOrderCheck" type="submit" class="btn btn-success btn-sm">작업시작</button>
+			</div>	
 		</div>
 	</div>
 </div>
@@ -97,10 +98,6 @@
 				<div style="display: flex; justify-content: space-between;">
 					<div id="goodQtyTable">
 		                <div class="qty-inputs">
-		                    <div>
-		                        <label for="goodQtyInput">생산수량</label>
-		                        <input class="num-input" type="text" id="goodQtyInput">
-		                    </div>
 		                    <div style="margin-top: 20px;">
 		                        <label for="defectQtyInput">불량수량</label>
 		                        <input class="num-input" type="text" id="defectQtyInput">
@@ -130,11 +127,11 @@
 						</div>
 					</div>
 				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-dark btn-sm" data-bs-dismiss="modal">닫기</button>
-					<button id="workUpdateSaveBtn" type="button" class="btn btn-success btn-sm">확인</button>
-				</div>	
 			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-dark btn-sm" data-bs-dismiss="modal">닫기</button>
+				<button id="defectSaveBtn" type="button" class="btn btn-success btn-sm">확인</button>
+			</div>	
 		</div>
 	</div>
 </div>
