라우팅 등록 자재 적용완료(다듬기만하면 끝)

--- a/erp_mes/src/main/resources/templates/plant/process_route.html
+++ b/erp_mes/src/main/resources/templates/plant/process_route.html
@@ -17,15 +17,16 @@
 <th:block layout:fragment="content">
     <div class="container-fluid">
     	
-<!--     	<button id="prs-add" class="btn btn-primary btn-sm" onclick="addProcess()" style="float:right;">추가</button> -->
 		<div class="d-flex align-items-center gap-2">
-  			<label for="orderStatus" class="orderStatus">진행상태</label>
-      		<select id="orderStatus" class="form-select" aria-label="전체">
-          	
+  			<label for="orderStatus" class="orderStatus">제품</label>
+      		<select id="orderStatus" class="form-select" aria-label="전체" style="margin-left:10px;">
+       			<option value="ALL">전체</option>
+          		<option value="RECEIVED">a엔진</option>
+          		<option value="INPRODUCTION">b엔진</option>
+          		<option value="INSHIPMENT">c엔진</option>
       		</select>
         </div>
-    	<button id="prs-add" class="btn btn-primary btn-sm" onclick="addRoute()" style="float:right;">추가</button>
-    	<button id="openModalBtn" class="btn btn-primary btn-sm" style="float:right;">테스트</button>
+    	<button id="openModalBtn" class="btn btn-primary btn-sm" style="float:right;">추가</button>
 		<div id="grid" style="width: 100%; height: 300px;"></div>
 	
 
@@ -52,26 +53,21 @@
           				</th:block>
 		       		</select>
 		          </div>
-		          <div class=selectBox id=hideSelect  style="display:none; ">
+		          <div class="selectBox" id="hideSelect" style="display:none;">
 			          <div class="mb-3">
-			            <label for="typeNm" class="form-label">bom</label>
-			            <select name="productId" class="form-select" id="productId">
-			          		<option value="">제품 이름을 선택하세요</option>
-			          		<th:block th:each="product :${product}">
-		         					<option th:value="${product.productId}" th:text="${product.productName}"></option>
-		         				</th:block>
+			            <label for="bomId" class="form-label">bom</label>
+			            <select name="bomId" class="form-select" id="bomId">
+			          		
 			       		</select>
 			          </div>
+			    
 			          <div class="mb-3">
-			            <label for="typeNm" class="form-label">자재</label>
-			            <select name="productId" class="form-select" id="productId">
-			          		<option value="">제품 이름을 선택하세요</option>
-			          		<th:block th:each="product :${product}">
-		         					<option th:value="${product.productId}" th:text="${product.productName}"></option>
-		         				</th:block>
+			            <label for="materialId" class="form-label">자재</label>
+			            <select name="materialId" class="form-select" id="materialId">
+			          		
 			       		</select>
 			          </div>
-		          </div>
+		           </div>
 		          
 		          
 		          <div class="mb-3">
