--- a/erp_mes/src/main/resources/templates/hrn/personnelRegist.html
+++ b/erp_mes/src/main/resources/templates/hrn/personnelRegist.html
@@ -31,7 +31,7 @@
 								<i class="fa-solid fa-pen"></i> 기본정보</h1>
 						</div>
 
-						<form th:action="@{/personnel/registPro}" id="registForm" name="registForm" method="post" enctype="multipart/form-data">
+						<form id="registForm" name="registForm" enctype="multipart/form-data">
 							<table class="eTable">
 								<tbody>
 									<tr>
@@ -45,13 +45,13 @@
 										<th scope="row" class="custom-th">
 											<label for="emp_nm" class="form-label">이름</label></th>
 										<td colspan="3" class="custom-td">
-											<input type="text" class="form-control w-75" id="emp_nm" name="name"></td>
+											<input type="text" class="form-control w-75" id="name" name="name"></td>
 
 										<!-- 전화번호 -->
 										<th scope="row" class="custom-th">
 											<label for="emp_ph" class="form-label">전화번호</label></th>
 										<td colspan="3" class="custom-td">
-											<input type="text" class="form-control w-75" id="emp_ph" name="phone">
+											<input type="text" class="form-control w-75" id="phone" name="phone">
 											<span id="checkPhoneResult"></span>
 										</td>
 
@@ -59,7 +59,7 @@
 										<th scope="row" class="custom-th">
 											<label for="emp_bd" class="form-label">주민등록번호</label></th>
 										<td colspan="3" class="custom-td">
-											<input type="text" class="form-control w-75" id="emp_bd" name="resident" placeholder="(ex) 990101-1111111" maxlength="14"></td>
+											<input type="text" class="form-control w-75" id="resident" name="resident" placeholder="(ex) 990101-1111111" maxlength="14"></td>
 									</tr>
 
 									<tr>
@@ -67,19 +67,19 @@
 										<th scope="row" class="custom-th">
 											<label for="emp_bd" class="form-label">패스워드</label></th>
 										<td colspan="3" class="custom-td">
-											<input type="text" class="form-control w-75" id="emp_bd" name="passwd" placeholder="패스워드 입력" ></td>
+											<input type="text" class="form-control w-75" id="passwd" name="passwd" placeholder="패스워드 입력" ></td>
 										<!-- 이메일 -->
 										<th scope="row">
 											<label for="emp_em" class="form-label">이메일</label></th>
 										<td colspan="3">
-											<input type="text" class="form-control w-75" id="emp_em" name="email" placeholder="aaa@naver.com">
+											<input type="text" class="form-control w-75" id="email" name="email" placeholder="aaa@naver.com">
 											<span id="checkEmailResult"></span>
 										</td>
 										<!-- 재직현황 -->
 										<th scope="row">
 											<label for="emp_yn" class="form-label">재직현황</label></th>
 										<td colspan="3">
-											<select id="emp_yn" name="staId" class="form-select w-75">
+											<select id="staId" name="staId" class="form-select w-75">
 												<th:block th:each=" status: ${status}">
 													<option th:value="${status.comDtId}" th:text="${status.comDtNm}">
 												</th:block>
@@ -101,7 +101,7 @@
 										<th scope="row" class="custom-th">
 											<label for="dep_nm" class="form-label">부서명</label></th>
 										<td colspan="3">
-											<select id="dep_nm" name="deptId" class="form-select w-75">
+											<select id="dep" name="deptId" class="form-select w-75">
 												<option value="1">부서명을 선택하세요</option>
 												<th:block th:each="departments : ${departments}">
 													<option th:value="${departments.comDtId}" th:text="${departments.comDtNm}">
@@ -113,7 +113,7 @@
 										<th scope="row" class="custom-th">
 											<label for="emp_gd" class="form-label">직책</label></th>
 										<td colspan="3">
-											<select id="emp_gd" name="posId" class="form-select w-75">
+											<select id="pos" name="posId" class="form-select w-75">
 												<option value="1">직책을 선택하세요</option>
 												<th:block th:each="position : ${position}">
 													<option th:value="${position.comDtId}" th:text="${position.comDtNm}">
@@ -125,7 +125,7 @@
 										<th scope="row" class="custom-th">
 											<label for="emp_lv" class="form-label">보안등급</label></th>
 										<td colspan="3">
-											<select id="emp_lv" name="levId" class="form-select w-75">
+											<select id="level" name="levId" class="form-select w-75">
 												<option value="">보안등급을 선택하세요</option>
 												<th:block th:each="level : ${level}">
 													<option th:value="${level.comDtId}" th:text="${level.comDtNm}">
@@ -140,7 +140,7 @@
 										<th scope="row">
 											<label for="emp_pc" class="form-label">우편번호</label></th>
 										<td colspan="3">
-											<input type="text" class="form-control w-75" id="emp_pc" name="addrNum"></td>
+											<input type="text" class="form-control w-75" id="addrNum" name="addrNum"></td>
 										<td colspan="3">
 											<button type="button" class="btn btn-primary btn-sm" id="btnSearchAddress">주소검색</button>
 										</td>
@@ -151,27 +151,27 @@
 										<th scope="row" class="custom-th">
 											<label for="emp_ad" class="form-label">기본주소</label></th>
 										<td colspan="3" class="custom-td">
-											<input type="text" class="form-control w-75" id="emp_ad" name="addr1"></td>
+											<input type="text" class="form-control w-75" id="addr1" name="addr1"></td>
 										<!-- 상세주소 -->
 										<th scope="row" class="custom-th">
 											<label for="emp_ba" class="form-label">상세주소</label></th>
 										<td colspan="3" class="custom-td">
-											<input type="text" class="form-control w-75" id="emp_ba" name="addr2"></td>
+											<input type="text" class="form-control w-75" id="addr2" name="addr2"></td>
 											
 											<th scope="row" class="custom-th-r">
 											<label for="emp_hd" class="form-label">입사일</label></th>
 										<td colspan="3" class="custom-td">
-											<input type="date" class="form-control w-75" id="emp_hd" name="joinDate"></td>
+											<input type="date" class="form-control w-75" id="joinDate" name="joinDate"></td>
 									</tr>
 								</tbody>
 							</table>
 						
+						</form>
 							<br> <br>
 							<div align="right">
 								<button type="button" class="btn btn-primary btn-sm" onclick="history.back()">취소</button>
-								<button type="submit" class="btn btn-primary btn-sm" id="registerBtn">등록</button>
+								<button type="submit" class="btn btn-primary btn-sm" id="registerBtn" onclick="formBtn()">등록</button>
 							</div>
-						</form>
 
 					</div>
 					<!-- <div class="card-body"> 끝 -->
@@ -180,6 +180,7 @@
 </th:block>
 
 <th:block layout:fragment="script">
+<script th:src="@{/bootstrap/vendor/jquery/jquery.min.js}"></script>
 <script th:src="@{/personnel/js/personnel_regist.js}"></script>
 
 	 	
